2005-12-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/proxies.py (Proxy._setup_widgets): 
	Cleanups:
	Use consistent exception messages
	Add and use ProxyError instead of TypeError
	Add a new check to ensure that there are no unsupported
	widgets added.
	Change a warning into an exception

2005-12-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/listener.py:
	* kiwi/ui/test/player.py:

	Improve the generated output format to be readable, remove
	some old stuff.

2005-12-02  Johan Dahlin  <jdahlin@async.com.br>

	* bin/kiwi-ui-test:
	* kiwi/ui/test/__init__.py:
	* kiwi/ui/test/common.py:
	* kiwi/ui/test/listener.py:
	* kiwi/ui/test/main.py:
	* kiwi/ui/test/player.py:
	Check-in initial gui testing framework.
	A recorder, which generates code which uses a simple
	player object.

2005-12-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py (get_site_packages_dir): 
	New function, to handle installation of modules in the site-packages
	directory in a platform independent way.

	* setup.py (version): Use it here.
	Fixes bug #2326 (Carlos Augusto Marcicano)

2005-11-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py (DataTypeProperty.save): Handle None,
	since it's now an allowed type

2005-11-26  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (List.remove): Remove the iter from the
	cache before remove the row.

2005-11-24  Henrique Romano  <henrique@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/argcheck.py:
	Allowing a "extra_check" function be called to validate
	data after type_check is executed over all the 
	parameters.

2005-11-24  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py:
	* kiwi/interfaces.py:
	* kiwi/log.py:
	* kiwi/proxies.py:
	* kiwi/ui/gadgets.py:
	* kiwi/ui/views.py:
	* kiwi/ui/widgets/checkbutton.py:
	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/entry.py:
	* kiwi/ui/widgets/label.py:
	* kiwi/ui/widgets/proxy.py:
	* kiwi/ui/widgets/radiobutton.py: